# bloom-test

./: README.md
kay-listener/: .env.example  .gitignore  LICENSE  README.md  build.bat  pyproject.toml  requirements.txt
kay-listener/app/: __init__.py  app.py  audio_stream.py  config.py  logger.py  recorder.py  tray.py  uploader.py  utils.py  wake_detector.py
kay-listener/scripts/: download_vosk_model.py  self_test.py
kay-listener/tests/: test_queue.py  test_silence.py  test_wake_normalize.py
